--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
         .drawer-overlay.active { visibility: visible; opacity: 1; }
         
         .info-tag { display: inline-block; padding: 4px 12px; border-radius: 8px; font-size: 0.75rem; background: var(--accent-light); color: var(--accent); margin-bottom: 12px; font-weight: 700; }
+        .info-item { margin-bottom: 18px; border-bottom: 1px solid var(--bg-page); padding-bottom: 12px; }
+        .info-label { font-size: 0.75rem; color: var(--text-sub); display: block; margin-bottom: 4px; }
+        .info-val { display: block; font-size: 1.05rem; color: var(--text-main); line-height: 1.6; }
         .facility-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; margin: 10px 0; }
         .facility-item { background: var(--bg-page); padding: 10px; border-radius: 12px; text-align: center; font-size: 0.7rem; }
         .facility-item i { display: block; font-size: 1.2rem; margin-bottom: 4px; color: var(--accent); }
